Move nav bar down to avoid overlapping recent searches dropdown

--- a/index.css
+++ b/index.css
@@ -10,6 +10,7 @@ nav {
     background: white;
     top: 0;
     /*margin-top: -200px;*/
+    padding-top: 30px;
     z-index: 99; /*Make sure the navigation is in front of everything*/
 }
 
